# dashboards

./: .deepsource.toml  .pylintrc  README.md  requirements.txt  setup.cfg  titanic.py
.github/workflows/: codeql-analysis.yml  python-app.yml
src/jaswdr_dashboards/: __version__.py  titanic.py
tests/: test_jaswdr_dashboards.py
