[metadata]
name = jaswdr-dashboards
description = dashboards: personal dashboards and data apps
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/jaswdr/dasboards
author = Jonathan Schweder
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = jaswdr, dashboards
project_urls =
    Changelog=https://github.com/jaswdr/dashboards/blob/main/CHANGELOG.rst
    Twitter=https://twitter.com/jaswdr
    Source=https://github.com/jaswdr/dasboards
    Tracker=https://github.com/jaswdr/dasboards/issues

[options]
packages =
    jaswdr_dashboards
install_requires =
    scikit-learn
    pandas
    plotly
    streamlit
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no

[options.entry_points]
console_scripts =
    titanic=jaswdr_dashboards.titanic

[options.extras_require]
testing =
    pytest

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

[check-manifest]
ignore =
    src/jaswdr_dashboards/__version__.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
